updating results and placing markers

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -280,44 +280,19 @@ Taken together, realised and unrealised interaction estimates are then used to p
     We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where focal elements consisted of \textbf{$s = 22$} focal species and up to \textbf{$k = 52$} neighbouring species (the 22 focal species and an additional 30 species) and performance $p$ was measured as viable seed production. The model returned estimates for all 1144 interactions between those 22 focal species and 52 interacting species, of which \textbf{56.7\% were realised} and estimated by the NDDM.  When accounting for focal species only, \textbf{82.0\%} of interactions were realised. 
 
     \paragraph{}
-    We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. \textbf{The joint model also returns simulated performance data for the RI model only, which we also checked visually (S.I. \ref{SI:results} Figure \ref{fig:ppcheckmu1}).}
+    We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. \textbf{The joint model also returns simulated performance data for the RI model only, which we also checked visually (S.I. \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction matrix $B$.}
 
 
-    % \paragraph{}
-    %     Jacopo made a few comments which I could also address here: 
-    %     \begin{itemize}
-    %         \item explore the values of r and e, e.g. whether they are correlated across species (they aren't) - can be included in Supps
-    %         \item interaction estimates for the REM peak around 0 - which can only occur if $r_i$ or $e_j$ are 0 - can discuss when this might occur (1. there exists true 0's such that some species have no effects on others - 2. some species might have both positive and negative effects so averages to 0 - 3. prior is centered on 0 and signal is too weak to be picked up)
+    %     interaction estimates for the REM peak around 0 - which can only occur if $r_i$ or $e_j$ are 0 - can discuss when this might occur (1. there exists true 0's such that some species have no effects on others - 2. some species might have both positive and negative effects so averages to 0 - 3. prior is centered on 0 and signal is too weak to be picked up)
 
-
-    
-
-%     \subsection{Rescaling the interactions}
-    
-% I don't know where this goes - does it just repeat the methods? maybe reduce to a few lines in results before case study results?
-% Really, it's just repeating stuff I've written above in the methods...
-
-%     \paragraph{}
-% 	The interaction matrix resulting from the joint model captures the likely effects of neighbours on the performance of focal elements, in this case species. Differences in the magnitude of these interaction terms reflect differences in intrinsic performance (performance in the absence of neighbours) of the focal elements. In order to make interactions comparable between elements that may have very different baseline values of performance, interaction terms can be rescaled by dividing them by the returned values for intrinsic performance. 
-
-
-%     \paragraph{}
-%     To understand how the returned interaction matrix may affect system-wide behaviour, it is useful to also integrate interaction estimates into an overarching model describing the dynamics of the elements in the community. In our wildflower case study, models of plant population dynamics are necessary to link interaction effects on performance to patterns of abundance and diversity. In our example, seed survival and germination rates were used to rescale interaction effects on seed production (our measure of performance) into \textit{per-capita} interaction effects on species growth rates. In other cases where different measures of performance are used (e.g. biomass or height), the species-specific demographic rates to be included and the rescaling formula must be derived from a system-appropriate population dynamic model, as illustrated in the Methods. The resulting per-capita interaction strengths allow us to draw inferrences about how elements may affect each other's growth and future abundances, which is particularly useful for a range of ecological applications as we further illustrate below. \\
-
-
-
-  
-
-    %\subsection{Case study results}
 
     \paragraph{}
-     For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}.A \& B). Though competition was the dominant interaction type,  37\% of all focal x neighbour interactions were facilitative, as were 32\% of all focal x focal interactions (medians across all network samples). As a result, 46\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much am element regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Overall, 77\% of focal species had a median intraspecific interaction strength which was competitive. 
+    \textbf{REDO below with correct numbers}
+     For our case study, the resulting interaction matrix $B$ was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. \textbf{Here we represent $B$ as a network between all 22 focal species, taking the median value of each interaction estimate across all samples.} Though competition was the dominant interaction type,  37\% of all focal x neighbour interactions were facilitative, as were 32\% of all focal x focal interactions (medians across all matrix samples). As a result, 46\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much am element regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Overall, 77\% of focal species had a median intraspecific interaction strength which was competitive. 
 
 
      \paragraph{}
      We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. 
-
-
 
 
     \subsection{Examples of ecological applications}
@@ -335,7 +310,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
     
 
     \subsubsection*{Do all exotic species compete with native species?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. All three exotic species have overall competitive effects, especially \textit{Arctotheca calendula} (ARCA) which is a weak facilitator but has a higher-than-median competitive effect on neighbours. \textit{Pentameris aroides} (PEAI) and \textit{Hypochaeris glabra} (HYPO) on the other hand are close to the community median for both facilitative and competitive effects. Neither \textit{P. aroides} nor \textit{H. glabra} are particularly competitive towards other species in the system, and even facilitate some species regardless of whether those are native or exotic. It appears instead that \textit{A. calendula} may be more of a threat to the native community than either of the other exotic species present. 
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. All three exotic species have overall competitive effects \textbf{DOUBLE CHECK}, especially \textit{Arctotheca calendula} (ARCA) which is a weak facilitator but has a higher-than-median competitive effect on neighbours. \textit{Pentameris aroides} (PEAI) and \textit{Hypochaeris glabra} (HYPO) on the other hand are close to the community median for both facilitative and competitive effects. Neither \textit{P. aroides} nor \textit{H. glabra} are particularly competitive towards other species in the system, and even facilitate some species regardless of whether those are native or exotic. It appears instead that \textit{A. calendula} may be more of a threat to the native community than either of the other exotic species present. 
 
     %\textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system, regardless of whether they are native or exotic. In this instance, \textit{P. aroides} is an exotic species that facilitates some native species.
 
