--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -65,11 +65,11 @@
 
 \noindent
 Number of words - Abstract: 144\\
-Number of words - main text: 4934\\
-% intro 698
-% methods 1838
-% results 1041
-% discussion 1357
+Number of words - main text: 5608\\
+% intro 693
+% methods 2434 (175+279+168+282+163+322+173+239+492+141)
+% results 1124 (71+462+591)
+% discussion 1357 (895+278+184)
 4 Figures in main text.\\
 Number of references: 85\\
 
@@ -287,8 +287,8 @@ Taken together, realised and unrealised interaction estimates are then used to p
 
 
     \paragraph{}
-    \textbf{REDO below with correct numbers}
-     For our case study, the resulting interaction matrix $B$ was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. \textbf{Here we represent $B$ as a network between all 22 focal species, taking the median value of each interaction estimate across all samples.} Though competition was the dominant interaction type,  37\% of all focal x neighbour interactions were facilitative, as were 32\% of all focal x focal interactions (medians across all matrix samples). As a result, 46\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much am element regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Overall, 77\% of focal species had a median intraspecific interaction strength which was competitive. 
+    \textbf{Exact numbers below have changed - facilitation is more prevalent now}
+     For our case study, the resulting interaction matrix $B$ was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. \textbf{Here we represent $B$ as a network between all 22 focal species, taking the median value of each interaction estimate across all samples.} Though competition was the dominant interaction type,  46.7\% of all focal x neighbour interactions were facilitative, as were 43.3\% of all focal x focal interactions (medians across all matrix samples). As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much an element regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Overall, 63.6\% of focal species had a median intraspecific interaction strength which was competitive. 
 
 
      \paragraph{}
@@ -306,14 +306,14 @@ Taken together, realised and unrealised interaction estimates are then used to p
     %[ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g. \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite rather low abundances: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Plotting species spatial association strengths against their log abundance, however, does not return the same insights (Figure \ref{fig:coocab}).
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g. \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). Plotting species spatial association strengths against their log abundance, however, does not return the same insights (Figure \ref{fig:coocab}).
     
 
     \subsubsection*{Do all exotic species compete with native species?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. All three exotic species have overall competitive effects \textbf{DOUBLE CHECK}, especially \textit{Arctotheca calendula} (ARCA) which is a weak facilitator but has a higher-than-median competitive effect on neighbours. \textit{Pentameris aroides} (PEAI) and \textit{Hypochaeris glabra} (HYPO) on the other hand are close to the community median for both facilitative and competitive effects. Neither \textit{P. aroides} nor \textit{H. glabra} are particularly competitive towards other species in the system, and even facilitate some species regardless of whether those are native or exotic. It appears instead that \textit{A. calendula} may be more of a threat to the native community than either of the other exotic species present. 
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). PEAI interacts weakly with neighbours, whether it is competing or facilitative, and ARCA does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are rather complex and species-dependent.
 
-    %\textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system, regardless of whether they are native or exotic. In this instance, \textit{P. aroides} is an exotic species that facilitates some native species.
-
+    
+    \subsection{Network results}
 
     % \paragraph{}
     % Potentially a short paragraph on 'network' results (weighted connectance, transitivity) so that I can later discuss how the scaling + network theory can allow us to link network patterns to diversity / stability etc. Basically scaling into per-capita is necessary if we want to make inferrences about diversity maintenance or stability. \\
@@ -379,7 +379,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
 
 \section*{Acknowledgements}
 
-We thank M. Raymundo \& I. Towers for the seed rate data used in this paper, C. Bowler, T. Britton, and J. Ikin for their work in sample processing for this data set, as well as Rob Freckleton and Jacopo Grilli for insightful comments on the manuscript. This work was made possible by funding awarded to M.M.M. (DP170100837) by the Australian Research Council. D.B.S. is grateful for the support of the Marsden Fund Council, from New Zealand Government funding (grant 16-UOC-008).
+We thank M. Raymundo \& I. Towers for the seed rate data used in this paper, C. Bowler, T. Britton, and J. Ikin for their work in sample processing for this data set, as well as Rob Freckleton and Jacopo Grilli for insightful comments on the manuscript. We would also like to thank Stefano Allesina and two anonymous reviewers for their valuable comments on an earlier version of this manuscript. This work was made possible by funding awarded to M.M.M. (DP170100837) by the Australian Research Council. D.B.S. is grateful for the support of the Marsden Fund Council, from New Zealand Government funding (grant 16-UOC-008).
 
 
 \section*{Competing interests}
@@ -425,8 +425,8 @@ The authors declare no competing interests.
     \begin{figure} [t!]
         \caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
         In (A), the x-axis shows the strength of per-capita intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' log abundance (y-axis). Values over $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
-        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' log abundance (x-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive effects on neighbours: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). \\
-        (C) decomposes a focal species' net interaction effects into its competitive effects (x-axis) and facilitative effects (y-axis). Red diamonds show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI).} 
+        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' log abundance (x-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive effects on neighbours: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). \\
+        (C) decomposes a focal species' net interaction effects into its competitive effects (x-axis) and facilitative effects (y-axis). Red diamonds show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect.} 
     \end{figure}
 
 \clearpage
@@ -435,7 +435,7 @@ The authors declare no competing interests.
     \begin{figure}[H]
         \begin{centering}
         \includegraphics[width=0.4\textwidth]{../../3.analyses/figures_mss/cooccur_vs_abund.png}
-        \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log abundance (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from abundances, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
+        \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log abundance (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from abundances, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
         \label{fig:coocab}
         \end{centering}
     \end{figure} 
